--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="format-detection" content="telephone=no,address=no">
   <meta name="apple-mobile-web-app-status-bar-style" content="white">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
+  <script src="./env.js"></script>
   <title></title>
   <script>
     /* 以下为 H5 响应式脚本，请不要删除！ */
